# game-state-manager

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/Helpers/: gameStateManager.cpp  gameStateManager.h  menu.cpp  menu.h  menuItem.cpp  menuItem.h
src/States/: menuState.cpp  menuState.h  playState.cpp  playState.h  splashState.cpp  splashState.h  state.h
